--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+@import url('https://css.gg/menu-boxed.css');
+@import url('https://css.gg/user.css');
+
 body {
     display: flex;
     flex-direction: column;
@@ -23,7 +26,15 @@ header {
     display: flex;
     flex-direction: row;
     align-content: center;
-    margin: 1;
+}
+
+#sandwich-nav {
+    display: none;
+}
+
+.nav-display {
+    display: flex;
+    flex-direction: row;
 }
 
 .logo-container {
@@ -36,12 +47,14 @@ header {
 nav {
     align-content: center;
     align-items: top;
+    flex-grow: 1;
 }
 
 nav ul {
     padding: 0%;
     margin: 0%;
     display: flex;
+    flex-grow: 1;
     flex-direction: row;
     list-style-type: none;
     justify-content: space-evenly;
@@ -141,4 +154,26 @@ nav ul li {
 #discover-new ul li {
     color: #fff;
     flex-direction: row;
+}
+
+.icon {
+    transform: scale(1.5);
+    color: gray;
+    margin: 50px 100px 50px 100px;
+}
+
+@media all and (max-width: 1200px) {
+    #normal-nav {
+        display: none;
+    }
+
+    #sandwich-nav {
+        display: flex;
+        flex-direction: row;
+        align-content: center;
+        align-items: center;
+        justify-content: space-between;
+        flex-grow: 1;
+    }
+
 }
