--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ nav ul li {
     background-image: linear-gradient(to right, rgb(217, 217, 217), rgb(76, 75, 75));
 }
 
-#oficial-network ul{
+#oficial-network ul {
     display: flex;
     flex-direction: row;
     list-style-type: none;
@@ -96,7 +96,7 @@ nav ul li {
     align-items: center;
 }
 
-#oficial-network ul li{
+#oficial-network ul li {
     padding: 00.7rem;
     font-size: 1.5rem;
     font-weight: bold;
@@ -109,6 +109,7 @@ nav ul li {
     height: 64px;
 
 }
+
 #compromises-info {
     background-color: #323e48;
     color: #fff;
@@ -170,52 +171,41 @@ div #compromises-info {
     background-color: #f7f7f7;
 }
 
-#opportunities-info .first-line {
+#opportunities-info ul {
     display: flex;
     flex-direction: row;
     list-style-type: none;
-    justify-content: space-evenly;
-}
-
-#opportunities-info .first-line li{
-    margin: 2rem;
-    padding: 3rem;
-    border: black solid 1px;
-    font-weight: bold;
+    padding: 0px;
+    flex-wrap: wrap;
+    flex-grow: 1;
+    align-items: center;
     align-content: center;
+    justify-content: space-around;
 }
 
-#opportunities-info .first-line li img{
-    width: auto;
-    height: 3rem;
-    fill:#13d0ca;
-}
-
-#opportunities-info .second-line {
+#opportunities-info ul li {
+    border: 1px solid #63656a;
     display: flex;
-    flex-direction: row;
-    list-style-type: none;
-    align-content: space-around;
-}
-
-#opportunities-info .second-line li{
-    margin: 2rem;
-    padding: 3rem;
-    border: black solid 1px;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 10px;
+    width: 23.33333333333333%;
+    font-size: 14px;
+    padding: 15px 30px 15px 30px;
     font-weight: bold;
-    align-content: center;
 }
 
-#opportunities-info .second-line li img{
-    width: auto;
-    height: 3rem;
-    fill:#13d0ca;
+#opportunities-info ul li img {
+    width: 32px;
+    height: 32px;
 }
 
 #discover-new {
     display: flex;
     flex-direction: column;
     padding: 3em;
+    justify-content: center;
     background-color: #767171;
 }
 
@@ -225,22 +215,28 @@ div #compromises-info {
     font-size: 2.5rem;
 }
 
-#discover-new ul{
+#discover-new ul {
     list-style-type: none;
     display: flex;
     flex-direction: row;
     color: #fff;
-    justify-content: space-evenly;
+    justify-content: center;
+    text-align: left;
+}
+
+#discover-new ul li {
+    width: 33.333333%;
 }
 
 #discover-new .discover-column {
+    padding: 0%;
     display: flex;
     flex-direction: column;
-    text-align: justify;
+    text-align: left;
     text-decoration: underline;
 }
 
-#discover-new .discover-column li {
+.discover-column li {
     display: flex;
     padding-top: 0.5rem;
 }
@@ -257,18 +253,19 @@ div #compromises-info {
     margin: 50px 100px 50px 100px;
 }
 
-#footer-last h2{
+#footer-last h2 {
     color: #fff;
     font-size: 2.5rem;
 }
-#footer-last{
+
+#footer-last {
     display: flex;
     flex-direction: column;
     padding: 3em;
     background-color: #101820;
 }
 
-#footer-last ul{
+#footer-last ul {
     display: flex;
     flex-direction: row;
     list-style-type: none;
@@ -276,7 +273,7 @@ div #compromises-info {
     justify-content: space-between;
 }
 
-#footer-last .brands{
+#footer-last .brands {
     display: flex;
     flex-direction: column;
     align-content: space-around;
