--- a/footer.css
+++ b/footer.css
@@ -15,19 +15,18 @@
     text-align: center;
 }
 
-#linha2 {
-    grid-row: 2 / 3;
-}
-
 #li2col1 {
+    grid-row: 2 / 3;
     grid-column: 1 / 2;
 }
 
 #li2col2 {
+    grid-row: 2 / 3;
     grid-column: 2 / 3;
 }
 
 #li2col3 {
+    grid-row: 2 / 3;
     grid-column: 3 / 4;
 }
 
@@ -42,28 +41,117 @@
 }
 
 #li3col1 {
+    grid-row: 1 / 2;
     grid-column: 1 / 4;
     text-align: center;
 }
 
-/*
-#linha4 {
-    grid-row: 2 / 3;
-    display: grid;
-}
-*/
-
 #li4col1 {
+    grid-row: 2 / 3;
     grid-column: 1 /2;
 }
 
 #li4col2 {
+    grid-row: 2 / 3;
     grid-column: 2 / 3;
 }
 
 #li4col3 {
+    grid-row: 2 / 3;
     grid-column: 3 /4;
 }
 
+#footer-last {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 3;
+}
 
+#footer-last li {
+    list-style-type: none;
+}
+
+#li5col1{
+    grid-row: 1 / 2;
+    grid-column: 1 / 7;
+    text-align: center;
+}
+
+#li6col1 {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+}
+
+#li6col2 {
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
+}
+
+#li6col3 {
+    grid-row: 2 / 3;
+    grid-column: 3 / 4;
+}
+
+#li6col4 {
+    grid-row: 2 / 3;
+    grid-column: 4 / 5;
+}
+
+#li7col1 {
+    grid-row: 3 / 4;
+    grid-column: 1 / 2;
+}
+
+#li7col2 {
+    grid-row: 3 / 4;
+    grid-column: 2 / 3;
+}
+
+#li7col3 {
+    grid-row: 3 / 4;
+    grid-column: 3 / 4;
+}
+
+#li7col4 {
+    grid-row: 3 / 4;
+    grid-column: 4 / 5;
+}
+
+#footer-footer {
+    display: inline-flex;
+}
+
+#footer-footer li {
+    list-style-type: none;
+    flex-direction: row;
+}
+
+/*
+#l1 {
+    grid-column: 1/2;
+}
+#l2 {
+    grid-column: 2/3;
+}
+#l3 {
+    grid-column: 3/4;
+}
+#l4 {
+    grid-column: 4/5;
+}
+#l5 {
+    grid-column: 5/6;
+}
+#l6 {
+    grid-column: 6/7;
+}
+#l7 {
+    grid-column: 7/8;
+}
+#l8 {
+    grid-column: 8/9;
+}
+#l9 {
+    grid-column: 9/10;
+}*/
 
