--- a/style.css
+++ b/style.css
@@ -216,6 +216,16 @@ nav ul li {
     line-height: 1.7;
 }
 
+#interim-info #underline {
+    text-decoration: underline;
+    text-decoration-color: #13d0ca;
+    text-decoration-style: solid;
+}
+
+#interim-info #underline:hover {
+    background-color: #13d0ca;
+    cursor: pointer;
+}
 /*#oficial-network {
     background-image: linear-gradient(to right, rgb(217, 217, 217), rgb(76, 75, 75));
 }
@@ -285,12 +295,18 @@ nav ul li {
     fill: #fff;
 }
 
-#compromises-info #phrase {
+#phrase {
     text-align: center;
     font-size: smaller;
     font-weight: bold;
     padding: 0.5rem;
-    border: 3px solid white;
+    border: 2px solid white;
+}
+
+#phrase:hover {
+    cursor: pointer;
+    background-color: #5c7182;
+    border: #5c7182 2px solid;
 }
 
 #opportunities-info {
@@ -326,9 +342,258 @@ nav ul li {
     font-weight: bold;
 }
 
+#opportunities-info ul li:hover{
+    color: #13d0ca;
+    border: #13d0ca 1px solid;
+    cursor: pointer;
+}
+
 #opportunities-info ul li img {
     width: 32px;
     height: 32px;
+}
+
+#pre-show ul {
+    display: grid;
+    grid-template-columns: 79% 4% 4% 11%;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    align-items: center;
+    justify-items: center;
+}
+#pre-show li {
+    padding: 10px 10px 10px 10px;
+    list-style-type: none;
+    line-height: 150%;
+}
+
+#pre-show li:first-child {
+    columns: 1/2;
+    text-align: center;
+    font-size: 29px;
+    font-weight: bolder;
+    color: #63656a;
+}
+
+#pre-show li:nth-child(2){
+    columns: 2/3;
+    border: lightgray solid 1px;
+    color: #7c868d;
+    font-size: 9px;
+    font-weight: bold;
+}
+
+#pre-show li:nth-child(3){
+    columns: 3/4;
+    border: lightgray solid 1px;
+    color: #7c868d;
+    font-size: 9px;
+    font-weight: bold;
+}
+
+#pre-show li:nth-child(4){
+    columns: 4/5;
+    border: lightgray solid 1px;
+    color: #7c868d;
+    font-size: 9px;
+    font-weight: bold;
+}
+
+#pre-show li:nth-child(2):hover, #pre-show li:nth-child(3):hover {
+    cursor: pointer;
+    border: orange 2px solid;
+    border-radius: 2px;
+}
+
+#pre-show li:nth-child(4):hover{
+    cursor: pointer;
+    background-color: #63656a;
+    color: #f7f7f7;
+}
+
+#car-show {
+    display: flex;
+    flex-wrap: wrap;
+    margin:10px;
+    justify-content: space-evenly;
+}
+
+.cars {
+    display: block;
+    background-color: #f7f7f7;
+}
+
+#first-car, #snd-car, #trd-car {
+    padding: 0px;
+}
+
+#first-car, #snd-car, #trd-car:hover{
+    cursor: pointer;
+}
+
+#first-car li, #snd-car li, #trd-car li {
+    list-style-type: none;
+}
+
+#first-car li:first-child, #snd-car li:first-child, #trd-car li:first-child {
+    padding: 15px;
+}
+
+#first-car li:nth-child(3), #snd-car li:nth-child(3), #trd-car li:nth-child(3) {
+    padding-top: 0px;
+    margin-top: 0px;
+    text-align: center;
+    background-color: #13d0ca;
+    color: antiquewhite;
+    font-weight: bold;
+    font-size: smaller;
+}
+
+#first-car li:nth-child(4), #snd-car li:nth-child(4), #trd-car li:nth-child(4) {
+    font-size: larger;
+    font-weight: bold;
+    padding: .9em;
+}
+
+#first-car li:nth-child(5), #snd-car li:nth-child(5), #trd-car li:nth-child(5) {
+    font-size: small;
+    font-weight: bold;
+    padding: .9em;
+}
+
+#first-car li:nth-child(6), #first-car li:nth-child(7), #snd-car li:nth-child(6), #snd-car li:nth-child(7), #trd-car li:nth-child(6), #trd-car li:nth-child(7) {
+    font-size: smaller;
+    font-weight: bold;
+    padding-left: .9em;
+}
+
+#first-car li:nth-child(8), #snd-car li:nth-child(8), #trd-car li:nth-child(8) {
+    font-size: x-small;
+    padding-left: .9em;
+    padding-top: .9em;
+    color: #63656a;
+    font-weight: bold;
+}
+
+#first-car li:nth-child(9), #first-car li:nth-child(10), #snd-car li:nth-child(9), #snd-car li:nth-child(10), #trd-car li:nth-child(9), #trd-car li:nth-child(10) {
+    font-size: x-small;
+    padding-left: .9em;
+    color: #63656a;
+    
+}
+
+#first-car-end, #snd-car-end, #trd-car-end {
+    padding-left: .9em;
+    padding-right: .9em;
+}
+
+#first-car-end:hover, #snd-car-end:hover, #trd-car-end:hover{
+    cursor: pointer;
+}
+
+#first-car-end li, #snd-car-end, #trd-car-end {
+    list-style-type: none;
+}
+
+#first-car-end li:first-child, #snd-car-end li:first-child, #trd-car-end li:first-child {
+    color: #13d0ca;
+    font-size: 30px;
+    font-weight: bold;
+    text-align: right;
+    margin-bottom: .9em;
+}
+
+#first-car-end li:nth-child(2), #snd-car-end li:nth-child(2), #trd-car-end li:nth-child(2) {
+    margin-top: 2px;
+    padding-top: .9em;
+    font-weight: bold;
+    border-top: #767171 2px solid;
+}
+
+#extra-finance {
+    display: flex;
+    justify-content: space-evenly;
+}
+.calculator {
+    background-color: aliceblue;
+    margin: 40px;
+    padding: 20px 100px;
+    border: #13d0ca 2px solid;
+    border-radius: 10px;
+}
+
+.calculator h2 {
+    text-align: left;
+    font-size: 26.8px;
+    line-height: 110%;
+}
+
+.calculator form label {
+    color: #13d0ca;
+    font-size: 1.2em;
+    margin: 10px 0px 10px 0px;
+}
+
+.calculator select {
+    border-color: grey;
+    border-width: 1px;
+    border-radius: 10px;
+    border-style: solid;
+    padding: 10px;
+}
+
+.calculator input {
+    border-color: grey;
+    border-width: 1px;
+    border-radius: 10px;
+    border-style: solid;
+    padding: 10px;
+    display: block;
+    margin-bottom: 20px;
+}
+
+.calculator select {
+    display: block;
+    margin-bottom: 20px;
+}
+
+.results {
+    display: none;
+    flex-direction: row;
+    align-items: center;
+    margin: 0;
+    flex-grow: 1;
+    justify-content: space-between;
+}
+
+.results ul {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.results ul :first-child {
+    font-size: large;
+    font-weight: bold;
+}
+
+.model-select {
+    display: none;
+}
+
+.price-input input {
+    display: inline !important;
+}
+
+.km-input input {
+    display: inline !important;
+}
+
+.vertical-line {
+    border-left: 1px solid lightgray;
+    height: 15em;
 }
 
 .banner1 .banner {
@@ -356,7 +621,6 @@ nav ul li {
     display: contents;
     font-size: 1.8em;
     position: relative;
-    flex-wrap: nowrap;
 }
 
 .banner1 img {
@@ -365,24 +629,36 @@ nav ul li {
 }
 
 .centered {
+    align-items: center;
     font-size: 100%;
     position: absolute;
-    top: 20%;
+    top: 35%;
     left: 50%;
-    transform: translate(-50%, -5%);
+    transform: translate(-50%, -40%);
+}
+
+.centered:hover {
+    cursor: pointer;
+    text-decoration: underline;
 }
 
 .centered-bottom {
     position: absolute;
-    bottom: 3%;
+    bottom: 20%;
     left: 50%;
-    transform: translate(-50%, -5%);
+    transform: translate(-50%, 70%);
     background-color: #13d0ca;
+    border: #13d0ca 2px solid;
     padding: 5px;
     font-size: 1.5em;
     font-weight: lighter;
 }
 
+.centered-bottom:hover {
+    cursor: pointer;
+    background-color: whitesmoke;
+    color: #13d0ca;
+}
 #banner1 p {
     position: absolute;
     color: whitesmoke;
@@ -449,6 +725,7 @@ nav ul li {
     text-align: center;
     color: #fff;
     font-size: 2rem;
+    line-height: 110%;
 }
 
 #li4col1 {
@@ -609,92 +886,8 @@ nav ul li {
     margin: 50px 100px 50px 100px;
 }
 
-#extra-finance {
-    display: flex;
-    justify-content: space-evenly;
-}
-.calculator {
-    background-color: aliceblue;
-    margin: 30px;
-    padding: 40px 100px;
-    border: #13d0ca 2px solid;
-    border-radius: 10px;
-}
 
-.calculator h2 {
-    text-align: center;
-    font-size: 26.8px;
-}
-
-.calculator form label {
-    color: #13d0ca;
-    font-size: 1.2em;
-    margin: 10px 0px 10px 0px;
-}
-
-.calculator select {
-    border-color: grey;
-    border-width: 1px;
-    border-radius: 10px;
-    border-style: solid;
-    padding: 10px;
-}
-
-.calculator input {
-    border-color: grey;
-    border-width: 1px;
-    border-radius: 10px;
-    border-style: solid;
-    padding: 10px;
-    display: block;
-    margin-bottom: 20px;
-}
-
-.calculator select {
-    display: block;
-    margin-bottom: 20px;
-}
-
-.results {
-    display: none;
-    flex-direction: row;
-    align-items: center;
-    margin: 0;
-    flex-grow: 1;
-    justify-content: space-between;
-}
-
-.results ul {
-    list-style-type: none;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.results ul :first-child {
-    font-size: large;
-    font-weight: bold;
-}
-
-.model-select {
-    display: none;
-}
-
-.price-input input {
-    display: inline !important;
-}
-
-.km-input input {
-    display: inline !important;
-}
-
-.vertical-line {
-    border-left: 1px solid lightgray;
-    height: 15em;
-}
-
-@media all and (max-width: 991px) {
+@media all and (max-width: 1100px) {
     #normal-nav {
         display: none;
     }
@@ -754,10 +947,10 @@ nav ul li {
     #search-mediaq ul li:last-child {
         color: gray;
         border-radius: 9px;
-        border: gray 3px solid;
-        margin-inline-start: 200px;
-        margin-inline-end: 200px;
-        padding: 2em 2em ;
+        border: #7c868d 3px solid;
+        padding: 2rem 3rem ;
+        margin-left: 25em;
+        margin-right: 25em;
     }
 
     #search-mediaq ul li:last-child:hover {
@@ -824,6 +1017,34 @@ nav ul li {
         padding-top: 1em;
         padding-bottom: 1em;
     }
+}
 
-    
+@media all and (max-width: 890px){
+    #extra-finance {
+        display: block;
+        padding-left: 60px;
+        padding-right: 60px;
+    }
+}
+
+@media all and (max-width: 770px){
+    #car-show {
+        display: contents;
+    }
+
+    .cars {
+        margin: 1em;
+    }
+
+    .cars #_1st, .cars #_2st, .cars #_3st  {
+        width: 100%;
+    }
+
+    #pre-show ul {
+        grid-template-columns: 100% 0% 0% 0%;
+    }
+
+    #pre-show li:nth-child(2), #pre-show li:nth-child(3), #pre-show li:nth-child(4){
+        display: none;
+    }
 }
